add copy time from prev week. make timecard time editable. switch to delete modal.

--- a/static/style.css
+++ b/static/style.css
@@ -712,7 +712,6 @@ a { color: #009FAA; }
 /* Add space between the table and the finalize button */
 #finalizeTimeModal .modal-body .text-right {
     margin-top: .5rem; /* Adjust the value as needed */
-<<<<<<< HEAD
 }
 
 .text-abas {
@@ -721,6 +720,10 @@ a { color: #009FAA; }
 
 .text-dark {
     color: #343a40; /* Darker color for contrast */
-=======
->>>>>>> 7aef9648097588e1f365523effa3f14655a40b35
+}
+
+.disabled-badge {
+    opacity: 0.6;
+    pointer-events: none;
+    cursor: not-allowed !important;
 }
